# xdelta

./: CMakeLists.txt
xdelta3/: CMakeLists.txt
